[fix] fix Add title alignment on very small screen

--- a/www/plugins/es/css/style.css
+++ b/www/plugins/es/css/style.css
@@ -50,7 +50,7 @@
 
 
 .card-record .item-thumbnail-left {
-  padding-left: 150px;
+  padding-left: 150px !important;
 }
 
 .card-record .item-thumbnail-left .item-image {
